Latest updated work

--- a/HW2_updated.ipynb
+++ b/HW2_updated.ipynb
@@ -169,7 +169,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Solution**:\n"
+    "**Solution**:\n",
+    "<br><br>\n",
+    "Seeking $P(F|E_n)$, we know ...\n",
+    "<br><br>\n",
+    "\n",
+    "$$P(F|E_n) = \\frac{P(E_n | F) P(F)}{P(E_n)}$$\n",
+    "\n",
+    "<br><br>\n",
+    "if we use the Law of total Probability...\n",
+    "<br><br>\n",
+    "$$P(F|E_n) = \\frac{P(E_n | F) P(F)}{P(E_n | F) P(F) + P(E_n | S) P(S) + P(E_n | T) P(T)}$$\n",
+    "<br><br>\n",
+    "Now to plug in our values...\n",
+    "<br><br>\n"
    ]
   },
   {
